exports[`test Child node 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Child node, option compact (JSX) 1`] = `
<Toolbar
  compact={true}>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</Toolbar>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  className="pe-toolbar   pe-light-tone ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Dark tone class + light tone class 1`] = `
<div
  className="pe-toolbar    pe-light-tone">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test JSX toolbar row (JSX) 1`] = `
<Toolbar>
  <ToolbarButton
    svg={
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24">
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
      </svg>
    } />
  <span>
    Title
  </span>
  <ToolbarButton
    svg={
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24">
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
      </svg>
    } />
  <ToolbarButton
    svg={
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24">
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
      </svg>
    } />
</Toolbar>
`;

exports[`test Option: compact 1`] = `
<div
  className="pe-toolbar pe-toolbar--compact   ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Option: content -- dark tone class 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Option: content 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Option: shadow (JSX) 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }>
  <Toolbar>
    <ToolbarButton
      svg={
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24">
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
        </svg>
      } />
    <span>
      Title
    </span>
    <ToolbarButton
      svg={
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24">
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
        </svg>
      } />
    <ToolbarButton
      svg={
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24">
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
        </svg>
      } />
  </Toolbar>
  <Shadow />
</div>
`;

exports[`test Option: shadow 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }>
  <Toolbar>
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                  }
            } />,
        }
      } />
    <div
      className="pe-toolbar__title">
      Toolbar with a very very very very very very very very very long title
    </div>
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                  }
            } />,
        }
      } />
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                  }
            } />,
        }
      } />
  </Toolbar>
  <Shadow />
</div>
`;

exports[`test Option: style (colors and height) (JSX) 1`] = `
<Toolbar
  content={
    Array [
      <IconButton
        icon={
            Object {
                "svg": <div
                  dangerouslySetInnerHTML={
                        Object {
                              "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                            }
                  } />,
              }
        } />,
      <div
        className="pe-toolbar__title">
        Toolbar with a very very very very very very very very very long title
    </div>,
      <IconButton
        icon={
            Object {
                "svg": <div
                  dangerouslySetInnerHTML={
                        Object {
                              "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                            }
                  } />,
              }
        } />,
      <IconButton
        icon={
            Object {
                "svg": <div
                  dangerouslySetInnerHTML={
                        Object {
                              "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                            }
                  } />,
              }
        } />,
    ]
  }
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
      "height": "72px",
    }
  } />
`;

exports[`test Option: style (colors and height) 1`] = `
<div
  className="pe-toolbar    "
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
      "height": "72px",
    }
  }>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Shadow 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }>
  <Toolbar>
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                  }
            } />,
        }
      } />
    <div
      className="pe-toolbar__title">
      Toolbar with a very very very very very very very very very long title
    </div>
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                  }
            } />,
        }
      } />
    <IconButton
      icon={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                  }
            } />,
        }
      } />
  </Toolbar>
  <Shadow />
</div>
`;

exports[`test Themed (dark tone) 1`] = `
<div
  className="pe-toolbar  pe-dark-tone  tests-toolbar-themed-toolbar">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Themed -- dark tone class 1`] = `
<div
  className="pe-toolbar    tests-toolbar-themed-toolbar">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <div
    className="pe-toolbar__title">
    Toolbar with a very very very very very very very very very long title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\"/></svg>",
                }
          } />,
      }
    } />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Title as span 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <span>
    Toolbar with a very very very long title
  </span>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test Title as span, indented (without left icon) 1`] = `
<div
  className="pe-toolbar    ">
  <div
    className="pe-toolbar__title--indent">
    Indented title
  </div>
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test ToolbarTitle 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <ToolbarTitle
    text="Toolbar with a very very very long title" />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test ToolbarTitle, at start 1`] = `
<div
  className="pe-toolbar    ">
  <ToolbarTitle
    text="Toolbar with a very very very long title" />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test ToolbarTitle, centered 1`] = `
<div
  className="pe-toolbar    ">
  <ToolbarTitle
    center={true}
    text="Toolbar with a very very very long title" />
</div>
`;

exports[`test ToolbarTitle, centered, balanced with a placeholder 1`] = `
<div
  className="pe-toolbar    ">
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"/></svg>",
                }
          } />,
      }
    } />
  <ToolbarTitle
    center={true}
    text="Toolbar with a very very very long title" />
  <IconButton
    icon={
      Object {
        "content": "",
      }
    }
    inactive={true} />
</div>
`;

exports[`test ToolbarTitle, indented (without left icon) 1`] = `
<div
  className="pe-toolbar    ">
  <ToolbarTitle
    indent={true}
    text="Toolbar with a very very very long title" />
  <IconButton
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;
